--- a/gerenciamentoEscolar/.gitignore
+++ b/gerenciamentoEscolar/.gitignore
@@ -4,6 +4,12 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+### MVN ###
+.mvn
+mvnw
+mvnw.cmd
+data
+
 ### STS ###
 .apt_generated
 .classpath
